feat: update api content and changes for 25w03a
Changes:
- Entity.moveTo is renamed snapTo
- Entities are moving slowly to components and hiding their data
  accessors, but nothing monumental yet on this front.

There will be more developments in the future to harness the usage of
the now-fully-included GameTest framework from Mojang. We'll be able to
use this to our better advantage to verify several thousand interactions
that otherwise manual testing will often forget.

See https://minecraft.wiki/w/Java_Edition_25w03a